implement delete role
